--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -4,508 +4,31 @@ permalink: /stocks/login
 title: Login
 ---
 
-head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/home.css">
-    <script src="https://kit.fontawesome.com/23cecef777.js" crossorigin="anonymous"></script>
-    <title>Home</title>
-  </head>
-  <style>
-    * {
-        padding: 0;
-        margin: 0;
-        color: white; /* Set default text color to white */
-    }
-    body {
-        background-color: #121212;
-        font-family: 'Montserrat', sans-serif;
-    }
-    .sidebar {
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 196px;
-        background-color: #000000;
-        padding: 24px;
-        color: #b3b3b3; /* Update text color in sidebar */
-    }
-    .sidebar .logo img {
-        width: 130px;
-    }
-      .sidebar .logo h2 {
-    color: #57B660; /* Change color to green */
-}
-.sidebar .logo a {
-    text-decoration: none; /* Remove underline */
-}
-    .sidebar .navigation ul {
-        list-style: none;
-        margin-top: 20px;
-    }
-    .sidebar .navigation ul li {
-        padding: 10px 0px;
-    }
-    .sidebar .navigation ul li a {
-        color: #b3b3b3;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 13px;
-    }
-    .sidebar .navigation ul li a:hover,
-    .sidebar .navigation ul li a:active,
-    .sidebar .navigation ul li a:focus {
-        color: #ffffff;
-    }
-    .sidebar .navigation ul li a:hover .fa,
-    .sidebar .navigation ul li a:active .fa,
-    .sidebar .navigation ul li a:focus .fa {
-        color: #b3b3b3;
-    }
-    .sidebar .navigation ul li .fa {
-        font-size: 20px;
-        margin-right: 10px;
-    }
-    .sidebar .navigation ul li a:hover .fa:hover,
-    .sidebar .navigation ul li a:hover .fa:active,
-    .sidebar .navigation ul li a:hover .fa:focus {
-        color: #ffffff;
-    }
-    .sidebar .policies {
-        position: absolute;
-        bottom: 100px;
-    }
-    .sidebar .policies ul {
-        list-style: none;
-    }
-    .sidebar .policies ul li {
-        padding-bottom: 5px;
-    }
-    .sidebar .policies ul li a {
-        color: #b3b3b3;
-        font-weight: 500;
-        text-decoration: none;
-        font-size: 10px;
-    }
-    .sidebar .policies ul li a:hover,
-    .sidebar .policies ul li a:active,
-    .sidebar .policies ul li a:focus {
-        text-decoration: underline;
-    }
-    .main-container {
-        margin-left: 245px;
-        margin-bottom: 100px;
-    }
-    .expense-input-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 300px;
-      margin-top: 50px;
-    }
-    .expense-input-container input[type="text"] {
-    width: 300px;
-    padding: 12px;
-    border: none;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    color: black;
-    text-align: center;
-    }
-    .expense-input-container button {
-    background-color: #1db954;
-    color: white;
-    padding: 15px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 300px;
-    }
-    .expense-input-container button:hover {
-    background-color: #179343;
-    }
-    .expense-history-container {
-    width: 100%; /* Full width of the container */
-    margin: 20px 0;
-    }
-    .expense-history-container table {
-    width: 100%; /* Full width of the container */
-    border-collapse: collapse; /* Merge borders for a cleaner look */
-    text-align: left;
-    }
-    .expense-history-container th, .expense-history-container td {
-    padding: 12px; /* Padding inside table cells */
-    border-bottom: 1px solid #444; /* Divider between rows */
-    color: #ffffff; /* Text color */
-    }
-    .expense-history-container th {
-    background-color: #2d2d2d; /* Dark header background */
-    color: #b3b3b3; /* Lighter text for headers */
-    font-weight: bold;
-    }
-    .expense-history-container td {
-    background-color: #333; /* Row background */
-    }
-    .expense-history-container tr:hover {
-    background-color: #444; /* Highlight row on hover */
-    }
-    .expense-history-container tr.selected {
-    background-color: white; /* Highlight selected row */
-    color: black; /* Black text for selected row */
-    }
-    .expense-history-container table {
-    margin-bottom: 20px;
-    }
-    .expense-history-container input {
-    width: 300px;
-    padding: 12px;
-    border: none;
-    border-radius: 10px;
-    color: black;
-    }
-    button {
-    background-color: #1db954;
-    color: white;
-    padding: 15px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 300px;
-    }
-    button:hover {
-    background-color: #179343;
-    }
-    .topbar {
-        display: flex;
-        justify-content: space-between;
-        background-color: #101010;
-        padding: 14px 30px;
-        color: #b3b3b3; /* Update text color in topbar */
-    }
-    .topbar .prev-next-buttons button {
-        color: #7a7a7a;
-        cursor: not-allowed;
-        width: 34px;
-        height: 34px;
-        border-radius: 100%;
-        font-size: 18px;
-        border: 0px;
-        background-color: #090909;
-        margin-right: 10px;
-    }
-    .topbar .navbar {
-        display: flex;
-        align-items: center;
-    }
-    .topbar .navbar ul {
-        list-style: none;
-    }
-    .topbar .navbar ul li {
-        display: inline-block;
-        margin: 0px 8px;
-        width: 70px;
-    }
-    .topbar .navbar ul li a {
-        color: #b3b3b3;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 14px;
-        letter-spacing: 1px;
-    }
-    .topbar .navbar ul li a:hover,
-    .topbar .navbar ul li a:active,
-    .topbar .navbar ul li a:focus {
-        color: #ffffff;
-        font-size: 15px;
-    }
-    .topbar .navbar ul li.divider {
-        color: #ffffff;
-        font-size: 26px;
-        margin: 0px 20px;
-        width: auto;
-    }
-    .topbar .navbar button {
-        background-color: #1db954;
-        color: #000000;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 14px 30px;
-        border: 0px;
-        border-radius: 40px;
-        cursor: pointer;
-        margin-left: 20px;
-    }
-    .topbar .navbar button:hover,
-    .topbar .navbar button:active,
-    .topbar .navbar button:focus {
-        background-color: #f2f2f2;
-    }
-    .spotify-playlists {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 80vh; /* Decreased height to make it occupy less vertical space */
-      padding: 20px; /* Adjusted padding */
-      text-align: center; /* Center text */
-      margin-top: -10px; /* Moved up */
-      margin-left: -100px; /* Moved left */
-  }
-    .spotify-playlists h2 {
-        color: #ffffff; /* Update text color in playlist header */
-        font-size: 22px;
-        margin-bottom: 20px;
-    }
-    .spotify-playlists form label {
-        display: block; /* Ensure each label and input pair is on its own line */
-        margin-bottom: 10px; /* Add some spacing between elements */
-    }
-    .spotify-playlists form input[type="text"],
-    .spotify-playlists form input[type="password"] {
-        width: 300px; /* Set the width of the textboxes */
-        padding: 12px; /* Add padding inside the textboxes */
-        border: none; /* Remove default border */
-        border-radius: 10px; /* Add rounded corners */
-        margin-bottom: 20px; /* Add some spacing between textboxes */
-        color: black; /* Set text color to black */
-    }
-    .spotify-playlists form button {
-        background-color: #1db954; /* Set background color to green */
-        color: white; /* Set text color to white */
-        padding: 15px; /* Increase padding for the button */
-        border: none; /* Remove default border */
-        border-radius: 10px; /* Add rounded corners */
-        cursor: pointer;
-        width: 300px; /* Make the button the same width as the textboxes */
-        display: block; /* Display the button on a separate line */
-        margin-bottom: 15px
-    }
-    .spotify-playlists form button:hover {
-        background-color: #179343; /* Darken the background color on hover */
-    }
-    .preview {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background: linear-gradient(to right, #ae2896, #509bf5);
-        padding: 15px 40px;
-        display: flex;
-        justify-content: space-between;
-    }
-    .preview h6 {
-        color: #ffffff;
-        text-transform: uppercase;
-        font-weight: 400;
-        font-size: 12px;
-        margin-bottom: 10px;
-    }
-    .preview p {
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-    }
-    .preview button {
-        background-color: #ffffff;
-        color: #000000;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 14px 30px;
-        border: 0px;
-        border-radius: 40px;
-        cursor: pointer;
-    }
-</style>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+</head>
 <body>
-    <div class="sidebar">
-      <div class="logo">
-        <a href="/NITD_frontend/home">
-            <h2> Home </h2>
-        </a>
-      </div>
-<div class="navigation">
-    <ul>
-        <li>
-            <a href="#" onclick="toggleExpenseInput()">
-                <span class="fa fas fa-plus-square"></span>
-                <span>Add Expense</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" onclick="viewHistory()">
-                <span class="fa fas fa-book"></span>
-                <span>View History</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" onclick="removeSelectedExpense()">
-                <span class="fa fas fa-minus-square"></span>
-                <span>Remove Expense</span>
-            </a>
-        </li>
-    </ul>
-</div>
-<div class="main-container">
-    <div class="expense-input-container" id="expenseInputContainer" style="display:none;">
-        <input type="text" id="expenseInput" placeholder="Enter expense" />
-        <button onclick="addExpense()">Add Expense</button>
-    </div>
-    <div class="expense-history-container" id="expenseHistoryContainer" style="display:none;">
-        <h2>Expense History</h2>
-        <ul id="expenseHistoryList"></ul>
-    </div>
-</div>
+  <div class="login-container">
+    <h1>Login</h1>
+    <form id="login-form">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+      <br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <button type="button" id="login-button">Login</button>
+    </form>
   </div>
-      <div class="policies">
-        <ul>
-          <li>
-            <a href="#">Cookies</a>
-          </li>
-          <li>
-            <a href="#">Privacy</a>
-          </li>
-        </ul> 
-      </div>
-    </div>
-    <div class="main-container">
-      <div class="topbar">
-        <div class="prev-next-buttons">
-          <button type="button" class="fa fas fa-chevron-left"></button>
-          <button type="button" class="fa fas fa-chevron-right"></button>
-        </div>
-        <div class="navbar">
-          <ul>
-            <li>
-              <a href="#">Premium</a>
-            </li>
-            <li>
-              <a href="#">Support</a>
-            </li>
-            <li>
-              <a href="#">Download</a>
-            </li>
-            <li class="divider">|</li>
-          </ul>
-          <button type="button" id="loginButton">
-            <a href="/NITD_frontend/login">Log In</a>
-        </button>
-        </div>
-      </div>
-      <div class="spotify-playlists">
-        <h2></h2>
-        <form onsubmit="login_user(event)">
-          <label for="uid"><b>Username</b></label>
-          <input type="text" id="uid" placeholder="Enter Username" name="uid" required>
-          <label for="password"><b>Password</b></label>
-          <input type="password" id="password" placeholder="Enter Password" name="password" required>
-          <button type="submit" class='button'>
-            <a>log in</a>
-        </button>
-          <div>
-              <span class="psw">Need an account? <a href="/NITD_frontend/signup">Sign Up</a></span>  
-          </div>
-      </form>
-      <script type="module">
-        function login_user(event) {
-          console.log("asijdaijsd 2")
-            event.preventDefault(); // Prevent the default form submission behavior
-            var myHeaders = new Headers();
-            myHeaders.append("Content-Type", "application/json");
-            // Update the API endpoint to use port 8000
-            const url = 'http://127.0.0.1:8086/api/users/authenticate';
-            const body = {
-                uid: document.getElementById("uid").value,
-                password: document.getElementById("password").value,
-            };
-            const authOptions = {
-                method: 'POST',
-                cache: 'no-cache',
-                headers: myHeaders,
-                body: JSON.stringify(body)
-            };
-            fetch(url, authOptions)
-            .then(response => {
-                if (!response.ok) {
-                    const errorMsg = 'Login error: ' + response.status;
-                    console.log(errorMsg);
-                    return;
-                }
-                window.location.href = "/NITD_frontend/home"; //CHANGE THIS
-            })
-            .catch(err => {
-                console.error(err);
-            });
-            sessionStorage.setItem("log", true);
-        }
-        window.login_user = login_user;
-    </script>
-      <script>
-        // Initialize an array to hold expenses
-        let expenses = [];
-        // Function to add an expense
-        function addExpense() {
-            const expenseInput = document.getElementById('expenseInput');
-            const expenseValue = expenseInput.value;
-            if (expenseValue.trim() === '') {
-                alert('Please enter a valid expense');
-                return;
-            }
-            // Add expense to the array
-            expenses.push(expenseValue);
-            // Clear the input field
-            expenseInput.value = '';
-            // Show the expense history
-            viewHistory();
-        }
-        // Function to view expense history
-        function viewHistory() {
-            const expenseHistoryContainer = document.getElementById('expenseHistoryContainer');
-            const expenseHistoryList = document.getElementById('expenseHistoryList');
-            // Show the expense history container
-            expenseHistoryContainer.style.display = 'block';
-            // Clear the current list
-            expenseHistoryList.innerHTML = '';
-            // Populate the expense history list
-            expenses.forEach((expense, index) => {
-                const li = document.createElement('li');
-                li.textContent = expense;
-                li.onclick = () => selectExpense(li, index); // Add click event to select expense
-                expenseHistoryList.appendChild(li);
-            });
-        }
-        // Function to select an expense
-        function selectExpense(li, index) {
-            // Deselect all items
-            const items = document.querySelectorAll('#expenseHistoryList li');
-            items.forEach(item => item.classList.remove('selected'));
-            // Highlight the selected item
-            li.classList.add('selected');
-        }
-        // Function to remove the selected expense
-        function removeSelectedExpense() {
-            const selectedExpense = document.querySelector('#expenseHistoryList li.selected');
-            if (!selectedExpense) {
-                alert('Please select an expense to remove');
-                return;
-            }
-            // Get the index of the selected expense
-            const index = Array.from(selectedExpense.parentNode.children).indexOf(selectedExpense);
-            // Remove the selected expense from the array
-            expenses.splice(index, 1);
-            // Remove the selected expense from the UI
-            selectedExpense.remove();
-            // Deselect the item
-            selectedExpense.classList.remove('selected');
-        }
-        // Function to toggle the expense input visibility
-        function toggleExpenseInput() {
-            const expenseInputContainer = document.getElementById('expenseInputContainer');
-            expenseInputContainer.style.display = expenseInputContainer.style.display === 'none' ? 'flex' : 'none';
-        }
-        // Expose functions to the global scope
-        window.addExpense = addExpense;
-        window.viewHistory = viewHistory;
-        window.removeSelectedExpense = removeSelectedExpense;
-        window.toggleExpenseInput = toggleExpenseInput;
-    </script>
+
+  <script>
+    document.getElementById('login-button').addEventListener('click', function() {
+      // Perform login validation here if needed
+      window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
+    });
+  </script>
+</body>
+</html>
