stylistic user changes type

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -6,29 +6,190 @@ title: Login
 
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page - Finotic</title>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f4f6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: #333;
+        }
+
+        .container {
+            display: flex;
+            background: #ffffff;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            max-width: 1000px;
+            width: 100%;
+        }
+
+        .left-section, .right-section {
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 50%;
+        }
+
+        .left-section {
+            background: #f8fafc;
+            text-align: center;
+        }
+
+        .right-section {
+            text-align: left;
+        }
+
+        .left-section h2 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: #1f2937;
+        }
+
+        /* Stock graph style for left section */
+        .stock-graph {
+            background: url('https://via.placeholder.com/300x200') no-repeat center center;
+            background-size: cover;
+            border-radius: 8px;
+            width: 80%;
+            height: 200px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+            margin-top: 1rem;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            color: #3b82f6;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+
+        .right-section h2 {
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+        }
+
+        .right-section p {
+            font-size: 1rem;
+            color: #6b7280;
+            margin-bottom: 1.5rem;
+        }
+
+        .input-group {
+            margin-bottom: 1rem;
+            position: relative;
+            width: 100%;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 0.8rem;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
+            font-size: 1rem;
+            color: #6b7280;
+        }
+
+        .input-group .icon {
+            position: absolute;
+            right: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #6b7280;
+            font-size: 1.2rem;
+            cursor: pointer;
+        }
+
+        .login-button {
+            width: 100%;
+            background-color: #3b82f6;
+            color: #ffffff;
+            border: none;
+            border-radius: 8px;
+            padding: 0.8rem;
+            font-size: 1.1rem;
+            cursor: pointer;
+            margin-top: 0.5rem;
+        }
+
+        .forgot-password {
+            font-size: 0.9rem;
+            color: #3b82f6;
+            text-align: right;
+            display: block;
+            margin-top: 0.5rem;
+        }
+
+        .signup-link {
+            margin-top: 1.5rem;
+            font-size: 0.9rem;
+            color: #6b7280;
+            text-align: center;
+        }
+
+        .signup-link a {
+            color: #3b82f6;
+            text-decoration: none;
+        }
+
+        .footer {
+            text-align: center;
+            font-size: 0.8rem;
+            color: #9ca3af;
+            margin-top: 1.5rem;
+        }
+    </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Login</h1>
-    <form id="login-form">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-      <br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-      <br>
-      <button type="button" id="login-button">Login</button>
-    </form>
-  </div>
+    <div class="container">
+        <!-- Left Section -->
+        <div class="left-section">
+            <h2>Market Overview</h2>
+            <div class="stock-graph">
+                Today's Market Trends
+            </div>
+        </div>
 
-  <script>
-    document.getElementById('login-button').addEventListener('click', function() {
-      // Perform login validation here if needed
-      window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
-    });
-  </script>
+        <!-- Right Section -->
+        <div class="right-section">
+            <h2>Welcome back!</h2>
+            <p>Start managing your finances faster and better</p>
+            
+            <form>
+                <div class="input-group">
+                    <input type="email" placeholder="you@example.com" required>
+                    <span class="icon">📧</span>
+                </div>
+                
+                <div class="input-group">
+                    <input type="password" placeholder="At least 8 characters" required>
+                    <span class="icon">🔒</span>
+                </div>
+
+                <a href="#" class="forgot-password">Forgot password?</a>
+
+                <button type="submit" class="login-button">Login</button>
+            </form>
+
+            <div class="signup-link">
+                Don't have an account? <a href="#">Sign Up</a>
+            </div>
+
+            <div class="footer">© 2022 ALL RIGHTS RESERVED</div>
+        </div>
+    </div>
 </body>
 </html>
